# Rebecca

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README-fa.md  README-ru.md  README-zh-cn.md  README.md  buf.gen.yaml  build_dashboard.sh  config.py  dev-builds.json  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml  rebecca-cli.py  rebecca.code-workspace  requirements.txt
.github/: dependabot.yml
app/: __init__.py  dependencies.py  jwt.py  runtime.py
cli/: README.md  admin.py  utils.py
dashboard/: README.md  __init__.py  biome.json  chakra.config.ts  example.env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: CONTRIBUTING.md  README-fa.md  README-ru.md  README-zh-cn.md  TODO_GO_ACCESS_INSIGHTS.md  TODO_GO_SETTINGS.md
go/: go.mod
packaging/: binary_launcher.py
scripts/: build_binary.sh  build_dashboard.sh  build_go_bridge.sh  build_go_cli.sh  build_tutorials.sh  entrypoint.sh  install_latest_xray.sh  install_service.sh  migrate_3xui_to_rebecca.py  migrate_v2board_to_rebecca.py  render_release_assets.py  seed_test_sqlite.py
test/: conftest.py  test_admin.py  test_ads.py  test_core.py  test_node.py  test_settings.py  test_subscription.py  test_system.py  test_user.py  test_user_template.py
tests/: conftest.py  test_3xui_import_api.py  test_access_insights_budget.py  test_access_insights_geo_urls.py  test_access_insights_node_mapping.py  test_access_insights_platform_guess.py  test_access_insights_sources.py  test_admin.py  test_admin_service_traffic_limits.py  test_ads.py  test_binary_runtime.py  test_core_env_persistence.py  test_core_outbound_test.py  test_core_security.py  test_created_traffic_mode.py  test_credentials.py  (+27 more)
(+889 files in other folders)
